# rillrate-py

./: .gitignore  Cargo.toml  README.md  build.sh  pyproject.toml  simple-test.py
.github/workflows/: ci.yml  release-crates.yml  release-pypi.yml  release.yml
do/: build  watch
examples/: basic.py  expansion.py
rillrate/: __init__.py  expansion.py
src/: controls.rs  flows.rs  lib.rs  utils.rs
src/prime/: control.rs  controls.rs  mod.rs  transparent.rs  visual.rs
tests/: test_basics.py
