[package]
name = "rillrate-py"
version = "0.21.0"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rate-technology/rillrate-py"
homepage = "https://github.com/rate-technology/rillrate-py"
documentation = "https://docs.rs/rillrate-py/"
license = "MIT"
readme = "README.md"
description = "rillrate bindings for python"
categories = ["development-tools::debugging"]
keywords = ["logging"]

[lib]
name = "rillrate"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.7.0"
pyo3 = "0.13.2"
rillrate = "0.21.0"

[features]
default = ["pyo3/extension-module"]
