[package]
name = "rillrate-py"
version = "0.24.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rate-technology/rillrate-py"
homepage = "https://github.com/rate-technology/rillrate-py"
documentation = "https://docs.rs/rillrate-py/"
license = "MIT"
readme = "README.md"
description = "rillrate bindings for python"
categories = ["development-tools::debugging"]
keywords = ["logging"]

[lib]
name = "rillrate"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.14.2"
rill-protocol = "0.37.0-rc.1"
rillrate = "0.37.0-rc.1"
rrpack-prime = "0.37.0-rc.1"

[features]
default = ["pyo3/extension-module"]
