[tool.poetry]
name = "rillrate"
version = "0.24.0"
description = "Dynamic UI for bots, microservices, and IoT."
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rillrate/rillrate-py"
keywords = ["logging"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
maturin = "==0.9.0"
pytest = "^6.1"
