[tool.poetry]
name = "rillrate"
version = "0.40.0"
description = "Real-time UI for bots"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rillrate/rillrate-py"
keywords = ["logging"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
maturin = "==0.9.0"
pytest = "^6.1"

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"
